--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,25 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    name: Check the source code
+  run-linters:
+    name: Run linters
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Install packages
+      - name: Check out Git repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
+      # ESLint and Prettier must be in `package.json`
+      - name: Install Node.js dependencies
         run: npm ci
-      - name: Prettier
-        run: npm run format
-      - name: Lint
-        run: npm run lint
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v1
+        with:
+          eslint: true
+          prettier: true
