--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/react-dom": "^17.0.10",
     "eslint": "^7.32.0",
     "node-sass": "^6.0.1",
-    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -45,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2",
+    "prettier": "2.5.1",
     "typescript": "^4.4.4"
   }
 }
